--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "firebase": "^10.14.0",
     "highlight.js": "^11.9.0",
     "prismjs": "^1.29.0",
     "vue": "^3.4.27",
@@ -18,7 +19,6 @@
   "devDependencies": {
     "@mdi/font": "^7.4.47",
     "@vitejs/plugin-vue": "^5.0.5",
-    "dotenv": "^16.4.5",
     "vite": "^5.3.1"
   }
 }
