--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,8 @@
     "@google/generative-ai": "^0.11.1",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "dotenv": "^16.4.5"
-  },
-  "devDependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2"
   },
   "nodemonConfig": {
     "verbose": false,
