--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "readme-vue",
-  "version": "1.1.3",
+  "version": "2.0.0",
   "description": "Readme generator FE",
   "scripts": {
     "dev": "vite --port 1080",
@@ -10,8 +10,8 @@
   "dependencies": {
     "axios": "^1.7.2",
     "firebase": "^10.14.0",
-    "highlight.js": "^11.9.0",
-    "prismjs": "^1.29.0",
+    "marked": "^15.0.7",
+    "pinia": "^3.0.1",
     "vue": "^3.4.27",
     "vue-router": "^4.3.3",
     "vuetify": "^3.6.9"
