--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "readme-gen",
-  "version": "1.1.3",
+  "version": "2.0.0",
   "description": "Github readme generator",
   "scripts": {},
-  "author": "Gargi, Jai",
+  "author": "Jai",
   "license": "ISC"
 }
