--- a/client/vercel.json
+++ b/client/vercel.json
@@ -4,5 +4,8 @@
         "source": "/api/:category([^/]+)",
         "destination": "https://readme-gen-be.vercel.app/api/:category/"
       }
+    ],
+    "routes": [
+      { "src": "/(.*)", "dest": "/index.html" }
     ]
   }
