--- a/client/vercel.json
+++ b/client/vercel.json
@@ -6,6 +6,6 @@
       }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/index.html" }
+      { "src": "/(.*)", "dest": "/" }
     ]
   }
