vercel.json update

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,8 +1,12 @@
 {
-    "rewrites": [
-      {
-        "source": "/api/:category([^/]+)",
-        "destination": "https://readme-gen-be-e9ffbmasdycccyfr.centralus-01.azurewebsites.net/api/:category/"
-      }
-    ]
-  }
+  "rewrites": [
+    {
+      "source": "/api/:category([^/]+)",
+      "destination": "https://readme-gen-be-e9ffbmasdycccyfr.centralus-01.azurewebsites.net/api/:category/"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
+}
