--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "readme-gen",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "Github readme generator",
   "scripts": {},
-  "author": "Jai",
+  "author": "Jai Gupta",
   "license": "ISC"
 }
