--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.7.2",
     "firebase": "^10.14.0",
     "marked": "^15.0.7",
